# cracked-ai-bot

./: config.py  main.py  pyproject.toml
commands/: ai_commands.py  utility_commands.py
db/: message_db.py  schema.sql
services/: scheduled_tasks.py
